// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NewNoteForm> matches snapshot 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-header"
    >
      Vytvořit novou poznámku
    </div>
    <div
      class="card-body"
    >
      <form
        class=""
      >
        <label
          class=""
          for="title"
        >
          Nadpis
        </label>
        <input
          class="form-control"
          id="title"
          type="text"
          value=""
        />
        <button
          class="mt-3 btn btn-primary disabled"
          disabled=""
        >
          Uložit
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`<NoteForm> matches snapshot 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-header"
    >
      Header
    </div>
    <div
      class="card-body"
    >
      <form
        class=""
      >
        <label
          class=""
          for="title"
        >
          Nadpis
        </label>
        <input
          class="form-control"
          id="title"
          type="text"
          value="initial"
        />
        <button
          class="mt-3 btn btn-primary"
        >
          Uložit
        </button>
        <button
          class="mt-3 ml-1 btn btn-danger"
          type="button"
        >
          Smazat
        </button>
      </form>
    </div>
  </div>
</div>
`;
